--- a/index.html
+++ b/index.html
@@ -17,23 +17,23 @@
             <p id="display-p">1 + 2 = 3</p>
         </div>
         <div id="calc-btns">
-            <button class="operator-btn">+</button>
-            <button class="operator-btn">-</button>
-            <button class="operator-btn">x</button>
-            <button class="operator-btn">÷</button>
-            <button class="operator-btn" id="equals-btn">=</button>
-            <button class="number-btn">1</button>
-            <button class="number-btn">2</button>
-            <button class="number-btn">3</button>
-            <button class="number-btn">4</button>
-            <button class="number-btn">5</button>
-            <button class="number-btn">6</button>
-            <button class="number-btn">7</button>
-            <button class="number-btn">8</button>
-            <button class="number-btn">9</button>
-            <button id="button0" class="number-btn">0</button>
-            <button class="number-btn">.</button>
-            <button id="clear-btn">AC</button>
+            <button id="plus" class="operator-btn">+</button>
+            <button id="minus" class="operator-btn">-</button>
+            <button id="times" class="operator-btn">x</button>
+            <button id="divided" class="operator-btn">÷</button>
+            <button id="1" class="number-btn">1</button>
+            <button id="2" class="number-btn">2</button>
+            <button id="3" class="number-btn">3</button>
+            <button id="4" class="number-btn">4</button>
+            <button id="5" class="number-btn">5</button>
+            <button id="6" class="number-btn">6</button>
+            <button id="7" class="number-btn">7</button>
+            <button id="8" class="number-btn">8</button>
+            <button id="9" class="number-btn">9</button>
+            <button id="0" class="number-btn">0</button>
+            <button id="period" class="number-btn">.</button>
+            <button id="clear">AC</button>
+            <button id="equals">=</button>
         </div>
         <h2>Made by CS Instruments</h2>
     </div>
