--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <div id="calculator">
         <h1>TI-8000000000</h1>
         <div id="calc-display">
-            <p id="display-p">1 + 2 = 3</p>
+            <ul>
+                <!-- <li id=result"></li> -->
+                <li id="operator"></li>
+                <li id="operand"></li>
         </div>
         <div id="calc-btns">
             <button id="plus" class="operator-btn">+</button>
@@ -30,8 +33,8 @@
             <button id="7" class="number-btn">7</button>
             <button id="8" class="number-btn">8</button>
             <button id="9" class="number-btn">9</button>
-            <button id="0" class="number-btn">0</button>
             <button id="period" class="number-btn">.</button>
+            <button id="0" class="number-btn">0</button>
             <button id="clear">AC</button>
             <button id="equals">=</button>
         </div>
