Working JS and CSS. Now need to bug fix.

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div id="calculator">
         <h1>TI-8000000000</h1>
         <div id="calc-display">
+            <p id="result"></p>
             <ul>
-                <!-- <li id=result"></li> -->
                 <li id="operator"></li>
                 <li id="operand"></li>
         </div>
